--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,6 +44,16 @@ spring:
             authorization-grant-type: authorization_code
             redirect-uri: ${NAVER_REDIRECT_URI}
 
+          google:
+            client-id: ${GOOGLE_ID}
+            client-secret: ${GOOGLE_SECRET}
+            scope:
+              - email
+              - profile
+            authorization-grant-type: authorization_code
+            client-name: Google
+            redirect-uri: ${GOOGLE_REDIRECT_URI}
+
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
